--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "next": "16.0.3",
     "prisma": "^5.3.1",
     "react": "19.2.0",
